# dalton

./: .env  .gitignore  CHANGELOG.rst  Dockerfile  Dockerfile-dalton  Dockerfile-nginx  INSTALL-AWS.rst  LICENSE.md  Makefile  README.md  README.rst  dalton.conf  docker-compose.yml  engine-configs  pyproject.toml  requirements.txt  run.py  start-dalton.sh  suricata-7.0.0.yaml
.github/workflows/: python-app.yml
api/: dalton.py
api/examples/: job_submission.py
api/examples/mocks/: engine_conf.yaml
app/: __init__.py  certsynth.py  dalton.py  flowsynth.py
app/static/: style.css
app/static/ajax/: payload_cert.html  payload_http.html  payload_raw.html
app/static/bootstrap/js/: bootstrap.js
app/static/css/: dalton.css  pcapgen.css
app/static/engine-configs/: clean_config.py  clean_snort_config.py
app/static/engine-configs/snort/: snort-2.9.0.3.conf  snort-2.9.0.conf  snort-2.9.1.0.conf  snort-2.9.1.1.conf  snort-2.9.10.conf  snort-2.9.11.conf  snort-2.9.2.0.conf  snort-2.9.2.1.conf  snort-2.9.2.2.conf  snort-2.9.2.3.conf  snort-2.9.20.conf  snort-2.9.3.1.conf  snort-2.9.3.conf  snort-2.9.4.1.conf  snort-2.9.4.5.conf  snort-2.9.4.6.conf  snort-2.9.4.conf  snort-2.9.5.0.conf  snort-2.9.5.3.conf  snort-2.9.5.5.conf  snort-2.9.5.6.conf  snort-2.9.6.1.conf  snort-2.9.6.2.conf  snort-2.9.7.0.conf  snort-2.9.7.2.conf  snort-2.9.7.5.conf  snort-2.9.7.6.conf  snort-2.9.8.0.conf  snort-2.9.8.2.conf  snort-2.9.8.3.conf  snort-2.9.9.0.conf
app/static/engine-configs/suricata/: suricata-0.8.1.yaml  suricata-0.8.2.yaml  suricata-0.9.0.yaml  suricata-0.9.1.yaml  suricata-0.9.2.yaml  suricata-1.0.0.yaml  suricata-1.0.1.yaml  suricata-1.0.2.yaml  suricata-1.0.3.yaml  suricata-1.1.yaml  suricata-1.2.yaml  suricata-1.3.1.yaml  suricata-1.3.3.yaml  suricata-1.3.4.yaml  suricata-1.3.6.yaml  suricata-1.3.yaml  suricata-1.4.1.yaml  suricata-1.4.yaml  suricata-2.0.1.yaml  suricata-2.0.2.yaml  suricata-2.0.6.yaml  suricata-2.0.yaml  suricata-3.0.1.yaml  suricata-3.0.2.yaml  suricata-3.0.yaml  suricata-3.1.1.yaml  suricata-3.1.2.yaml  suricata-3.1.yaml  suricata-3.2.1.yaml  suricata-3.2.4.yaml  suricata-3.2.yaml  suricata-4.0.0.yaml  suricata-4.0.1.yaml  suricata-4.0.3.yaml  suricata-4.1.0.yaml  suricata-4.1.5.yaml  suricata-4.1.9.yaml  suricata-5.0.0.yaml  (+1 more)
app/static/highlightjs/: highlight.pack.js
app/static/js/: dalton-utils.js
app/templates/dalton/: about.html  clear_queue_confirm.html  convert.html  coverage-summary.html  coverage.html  error.html  home.html  index.html  job.html  layout.html  queue.html  sensor.html  setuser.html
app/templates/pcapwg/: about.html  compile.html  convert.html  error.html  home.html  layout.html  packet.html  packet_gen.html
dalton-agent/: .bumpversion.toml  Dockerfile_snort-2.9.7.0  Dockerfile_suricata-3.0  Dockerfile_suricata-4.0.0  README.md  dalton-agent.conf  dalton-agent.py  dalton-suricata.lua  dns.lua  http.lua  tls.lua
dalton-agent/Dockerfiles/: Dockerfile_snort  Dockerfile_snort-2.9.7.0  Dockerfile_suricata  Dockerfile_suricata-1.3.6  Dockerfile_suricata-2.0.6  Dockerfile_suricata-4.0.0  Dockerfile_suricata-latest  Dockerfile_suricata_rust  Dockerfile_zeek
examples/: submit_job.py
flowsynth-gh/: requirements.txt
flowsynth-gh/src/: flowsynth.py
nginx-conf/: nginx.conf
nginx-conf/conf.d/: dalton.conf  dalton.logconf
nginx-conf/tls/: dalton.crt  dalton.key
res/etc/: supervisord.conf
tests/: base.py  conftest.py  test_dalton.py  test_factory.py  test_flowsynth.py
(+20 files in other folders)
